--- a/writeodll/WriteOcad.vcxproj
+++ b/writeodll/WriteOcad.vcxproj
@@ -86,6 +86,7 @@
     <ClInclude Include="..\libocad\types.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="WriteOcadCore.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\libocad\array.c" />
@@ -100,6 +101,7 @@
     <ClCompile Include="..\libocad\types.c" />
     <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="WriteOcad.cpp" />
+    <ClCompile Include="WriteOcadCore.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\libocad\libocad.pro" />
